--- a/src/components/EnterAmount/EnterAmount.css
+++ b/src/components/EnterAmount/EnterAmount.css
@@ -7,10 +7,10 @@
   width: 100%;
   justify-content: center;
 }
-.enter-amount-wrapper img{
+.enter-amount-wrapper img {
   margin: 10px 0;
 }
-.input-amount{
+.input-amount {
   max-width: 410px;
 }
 .form-container h2 {
@@ -21,13 +21,13 @@
 .account-details-wrapper {
   width: 100%;
 }
-.account-details label{
+.account-details label {
   display: flex;
   align-items: center;
   width: 100%;
   justify-content: space-between;
 }
-.choose-debit{
+.choose-debit {
   width: 100%;
   margin: 32px 0;
 }
@@ -37,23 +37,20 @@
   margin-bottom: 20px;
   letter-spacing: 1px;
 }
-.account-number{
-    font-size: 14px;
-    font-weight: 600;
+.account-number {
+  font-size: 14px;
+  font-weight: 600;
 }
-.account-label{
-    font-size: 12px;
-    color: rgb(60, 60, 60);
+.account-label {
+  font-size: 12px;
+  color: rgb(60, 60, 60);
 }
-hr{
+hr {
   margin: 0;
 }
-
 .form-container input[type="radio"] {
   margin-left: 5px;
 }
-
-
 
 .error-message {
   color: red;
@@ -63,4 +60,9 @@ hr{
 
 input.error {
   border-color: red;
+}
+@media (max-width: 768px) {
+  .account-number-wrapper {
+  text-align: start;
+  }
 }
