--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,11 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-#root {
+html, body, #root {
   height: 100%;
-}
-body,
-html {
   margin: 0;
-  padding: 0;
-  height: 100%;
 }
 
 h2 {
@@ -24,7 +19,7 @@ h2 {
 p {
   font-size: 14px;
 }
-.small-font{
+.small-font {
   font-size: 12px;
 }
 a {
@@ -35,6 +30,7 @@ a {
 button {
   font-size: 12px;
   margin-top: 10px;
+  font-weight: 600;
 }
 .next {
   margin-top: 20px;
@@ -42,7 +38,7 @@ button {
   background-color: #007bff;
   color: #fff;
   border: none;
-  border-radius: 8px;
+  border-radius: 0.25em;
   cursor: pointer;
 }
 .prev {
@@ -51,7 +47,7 @@ button {
   background-color: #fff;
   color: #007bff;
   border: solid 1px #007bff;
-  border-radius: 8px;
+  border-radius: 0.25em;
   cursor: pointer;
 }
 .button-wrapper {
@@ -73,9 +69,11 @@ button {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  max-width: 40em;
   box-sizing: border-box;
-  padding: 2em;
+  padding: 4em;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 0.5em;
 }
 
 @media (max-width: 768px) {
@@ -85,13 +83,25 @@ button {
   }
   .form-container {
     text-align: center;
+    box-shadow: none;
   }
   .next,
   .prev {
     padding: 10px 20px;
-  }.logo-wrapper {
-  width: 100%;
-  justify-content: center;
-  gap: 20px;
+  }
+  .logo-wrapper {
+    width: 100%;
+    justify-content: center;
+    gap: 20px;
+  }
+  .button-wrapper{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .prev{
+    margin: 0;
+    border: none;
+    color: black;
   }
 }
